#62 - fixed issue with jumping button

--- a/smartervote-webapp/src/main/resources/static/styles/custom.css
+++ b/smartervote-webapp/src/main/resources/static/styles/custom.css
@@ -489,8 +489,8 @@ a.election{
 /* end questions specific */
 
 /* start error specific */
-.btn-error {
-    margin-top: 80px;
+.error-title{
+    min-height: 150px !important;
 }
 /* end error specific */
 
